tests/reject/base_mismatch_return.ty
# A base-type mismatch on a return (string from a -> int function): clean diagnostic.
fn f() -> int:
    return "h"
fn main():
    println(str(f()))
